fixed issue in list codec where an unmodifiable list is decoded